syntax = "proto3";

package erspan_hub.pcap.v1;
option go_package = "anthonyuk.dev/erspan-hub/generated/pcap/v1;pcap_v1";


// The client sends this message to start the packet stream
message ForwardRequest {
    string src_ip = 1; // Source IP address
    uint32 erspan_id = 2; // ERSPAN ID
    string stream_info_id = 3; // Stream information ID
    string filter = 4; // Filter for the stream
}


// The server streams back multiple messages of this type.
message Packet {
    int64 timestamp = 1; // Packet timestamp (Unix time in nanoseconds), or <0 for shutdown signal
    bytes raw_data = 2;
}

// The service definition for the streaming API.
service PcapForwarder {
    rpc ForwardStream (ForwardRequest) returns (stream Packet);
}


message BPFInstruction {
    uint32 code = 1;
    uint32 jt = 2;
    uint32 jf = 3;
    uint32 k = 4;
}

message ValidateFilterRequest {
    string filter = 1;
}

message ValidateFilterResponse {
    bool valid = 1; // True if the filter is valid
    string error_message = 2; // Empty if valid is true
    repeated BPFInstruction bpf = 3;
}

service ValidateFilterService {
  rpc ValidateFilter(ValidateFilterRequest) returns (ValidateFilterResponse);
}
